# stellar_card-contract

./: Cargo.toml  README.md
api/: agent-api.d.ts  agent-api.openapi.yaml  vcc-internal.d.ts  vcc-internal.openapi.yaml
docs/: upgrade-runbook.md
src/: lib.rs
test_snapshots/test/: test_init_requires_admin_auth.1.json  test_init_stores_all_addresses.1.json  test_pay_usdc_emits_correct_event.1.json  test_pay_usdc_transfers_to_treasury.1.json  test_pay_xlm_emits_correct_event.1.json  test_pay_xlm_rejects_negative_amount.1.json  test_pay_xlm_requires_auth.1.json  test_pay_xlm_transfers_to_treasury.1.json  test_try_getters_before_init_return_err.1.json  test_upgrade_requires_admin_auth.1.json
