[package]
name = "stellar_card-receiver"
version = "0.1.0"
edition = "2021"

[lib]
# rlib is required for `cargo test` to link the crate; cdylib is the wasm output
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "=22.0.11", features = [] }

[dev-dependencies]
soroban-sdk = { version = "=22.0.11", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
